# se-toolkit-lab-8

./: docker-compose.yml
backend/app/routers/: items.py
mcp/mcp_observability/: server.py
nanobot/: Dockerfile  config.json  entrypoint.py  pyproject.toml
nanobot/workspace/: SOUL.md  TOOLS.md  USER.md
nanobot/workspace/cron/: jobs.json
nanobot/workspace/sessions/: cli_direct.jsonl
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
